# zingu-apis

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: CLI-SPECIFICATION.md  ZINGU-APIS-DOCUMENTATION.md
examples/: dayinhistory.md  dayinhistory.py
src/zingu_apis/: __init__.py  __main__.py  _auth.py  _cache.py  _client.py  _endpoint.py  _errors.py  _meta.py  _prune.py  _result.py  _strategies.py  _types.py  cli.py  mcp_server.py
