[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zingu-apis"
version = "0.1.0"
description = "Pagination-aware API client powered by Zingu metadata"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://zingu.dev"

[tool.hatch.build.targets.wheel]
packages = ["src/zingu_apis"]
